# viator

./: .gitignore  cargo.toml
viator/: Cargo.toml
viator/src/: lib.rs
viator/src/grid/: grid.rs  mod.rs
viator/src/grid/voxel/: dynamic_sized_voxel_grid.rs  mod.rs  static_sized_voxel_grid.rs
viator/src/path/: jps.rs  mod.rs  path.rs
viator/src/primitive/: alias.rs  cell.rs  cuboid.rs  mod.rs  vector.rs
viator_box/: Cargo.toml
viator_box/src/: main.rs
viator_box/src/component/: mod.rs
viator_box/src/component/camera/: fly_camera_component.rs  mod.rs
viator_box/src/component/grid/: grid_draw_component.rs  mod.rs
viator_box/src/component/ui/: fps_text_component.rs  mod.rs
viator_box/src/plugin/: mod.rs
viator_box/src/plugin/gizmo/: gizmo.rs
viator_box/src/plugin/material/: line_material.rs  mod.rs
viator_box/src/plugin/mesh/: line_renderer.rs  mod.rs
viator_box/src/system/camera/: fly_camera_system.rs  mod.rs
viator_box/src/system/grid/: draw_grid_unoptimized_system.rs  mod.rs
viator_box/src/system/ui/: fps_text_system.rs  mod.rs
