[package]
name = "viator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["y_up", "transform_32", "transform_right_handed"]
y_up = []                                                    # Unity, GoDot
z_up = []                                                    # Unreal
transform_32 = []
transform_64 = []
transform_right_handed = []
transform_left_handed = []
