[package]
name = "viator_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viator = { path = "../viator", features = ["y_up", "transform_32"] }
bevy = "0.13.1"
bevy_mod_raycast = "0.17.0"
bevy_console = "0.11.1"
bevy_obj = "0.13.0"
